--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.7.0",
+    "react-library": "^1.0.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
